@@ -43,6 +43,8 @@ TRANSLATE_PIPE = 39
 TRANSLATE_BASE = 40
 TRANSLATE_DELEGATE = 41
 TRANSLATE_INVALIDATE = 42
+TRANSLATE_LOCAL_ADDRESS = 43
+TRANSLATE_LOCAL_ADDRESS_STRING = 44
 
 class PacketReader:
     def __init__(self):
