@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.5.11) unstable; urgency=low
   * Makefile.am: support out-of-tree builds
   * added optimized Debian package
   * tcache: fixed wrong assignment in VARY=HOST
+  * translation: added request packet LOCAL_ADDRESS
 
  --
 
